loadbalancer-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-web-app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
  type: LoadBalancer
  selector:
    app: my-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
